# tinyXSF

./: CONTRIBUTING.rst  Makefile  NHfast.py  README.rst  multispecopt.py  plotresponse.py  pyproject.toml  reflopt.py  setup.py  simple.py  simpleopt.py  simplev.py
.github/workflows/: tests.yml
scripts/: xagnfitter.py
tests/: test_lum.py  test_table.py
tinyxsf/: __init__.py  data.py  flux.py  model.py  plot.py  response.py
